--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
             <a href="https://twitter.com/siribroness"><i class="fab fa-twitter fa-3x"></i></a>
             <a href="https://instagram.com/sir_ibroness"><i class="fab fa-instagram fa-3x"></i></a>
             <a href="https://www.linkedin.com/in/ibrahim-hussaini-tijjani-476625162/"><i class="fa-brands fa-linkedin fa-3x"></i></a>
-            <button class="btn">CONTACT</button>
+<!--           Gallery section   -->
+         <div class="gallery img">
+                <img src="/b.jpg" alt="">
+                <img src="/c.jpg" alt="">
+                <img src="/d.jpg" alt="">
+                <img src="/e.jpg" alt="">
+                <img src="/f.jpg" alt="">
+                
+            </div>
 </div>
 <!-- Section 3 Skills -->
     <div class="container3">
